# GEMM-cuda

./: .gitignore  CMakeLists.txt  GEMM.cu  GEMM.cuh  GEMM_kernels.cu  GEMM_kernels.cuh  main.cu  matrix_generator.cu  utils.cuh
.cache/clangd/index/: GEMM.cu.B4D6388779BABDC1.idx  GEMM.cuh.20B5202C33A6A196.idx  GEMM_kernels.cu.C82F5C95899B32AB.idx  GEMM_kernels.cuh.5FC4EFC52C519873.idx  GEMM_kernels.cuh.B738CF8A3B1CAB52.idx  coalesced_kernel.cuh.E089906304B5A9C1.idx  eq_check.cuh.68A9B5B10D92E25C.idx  kernels.h.1E33E95E4F89C93C.idx  main.cu.951420480C4732F3.idx  matrix_generator.cu.B9EF1104801878F8.idx  naive_kernel.cuh.17272E221FE5858D.idx  shared_mem_kernel.cuh.BD50550358EE92B0.idx  tensor_core_kernel.cuh.C39270B2EAFFA559.idx  test.cu.6D9D1090880488E6.idx  thread_tiling_kernel.cuh.E1E562F117C2D708.idx  utils.cuh.9756D5C2B69DD55B.idx
kernels/: GEMM_kernels.cuh  coalesced_kernel.cuh  eq_check.cuh  naive_kernel.cuh  shared_mem_kernel.cuh  thread_tiling_kernel.cuh
